Fixed responsiveness due to margin collapse

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -11,7 +11,7 @@
   box-sizing: border-box;
 }
 
-body {
+body.container {
   margin:0;
   padding:0;
   position: relative;
